--- a/src/public/index.css
+++ b/src/public/index.css
@@ -39,6 +39,12 @@ body {
     color: var(--color-button);
 }
 
+.histories-display {
+    width: 100%;
+    height: 100px;
+    resize: none;
+}
+
 @media screen and (prefers-color-scheme: light) {
     html {
         --background-body: white;
