fix: Media query comentado por temas de compatibilidad con el modo oscuro

--- a/src/public/index.css
+++ b/src/public/index.css
@@ -82,6 +82,7 @@ body.active {
     --border-color-display: black;    
 }
 
+/*
 @media screen and (prefers-color-scheme: light) {
     html {
         --background-body: white;
@@ -90,3 +91,4 @@ body.active {
         --border-color-display: black;
     }
 }
+*/
